added some comments in python code

--- a/01_data_preprocessing/data_preprocessing_tools.ipynb
+++ b/01_data_preprocessing/data_preprocessing_tools.ipynb
@@ -22,17 +22,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {
         "colab": {},
         "colab_type": "code",
         "id": "N-qiINBQSK2g"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "numpy version: 1.25.2\n",
+            "matplotlib's pyplot version: 3.7.2\n",
+            "pandas version: 2.0.3\n"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import pandas as pd"
+        "import matplotlib as mpl\n",
+        "import pandas as pd\n",
+        "\n",
+        "print(f\"numpy version: {np.__version__}\")\n",
+        "print(f\"matplotlib version: {mpl.__version__}\")\n",
+        "print(f\"pandas version: {pd.__version__}\")"
       ]
     },
     {
@@ -53,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -71,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -112,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -147,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 17,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -156,14 +171,17 @@
       "outputs": [],
       "source": [
         "from sklearn.impute import SimpleImputer\n",
+        "# make an instance of the SimpleImputer class, and pass the missing_values and strategy arguments to it.\n",
         "imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
+        "\n",
+        "# we're not going to fit the imputer to the whole dataset, because the first column is categorical data.\n",
         "imputer.fit(X[:, 1:3])\n",
         "X[:, 1:3] = imputer.transform(X[:, 1:3])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -217,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 19,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -225,15 +243,23 @@
       },
       "outputs": [],
       "source": [
+        "# we will need column transformer because we need to transform the columns\n",
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
+        "\n",
+        "# column transformer takes a list of tuples as an argument. Each tuple has 3 arguments:\n",
+        "# 1. name of the transformer\n",
+        "# 2. the transformer\n",
+        "# 3. the columns that we want to transform\n",
+        "\n",
+        "# We also need to state to do with the rest of the columns that we don't want to transform. We can either drop them or leave them as they are. We will use the 'remainder' argument for that.\n",
         "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0])], remainder='passthrough')\n",
         "X = np.array(ct.fit_transform(X))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -277,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 21,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -292,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -327,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 23,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -335,13 +361,17 @@
       },
       "outputs": [],
       "source": [
+        "# passing the test_size argument to the train_test_split method, we can specify the percentage of the dataset that we want to use for testing.\n",
+        "\n",
+        "# passing the random_state argument to the train_test_split method, we can specify the seed for the random number generator, so that we can get the same results every time we run the code.\n",
+        "\n",
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 1)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -373,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -399,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -424,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -459,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 28,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -469,13 +499,15 @@
       "source": [
         "from sklearn.preprocessing import StandardScaler\n",
         "sc = StandardScaler()\n",
+        "\n",
+        "# we're not going to fit the scaler to the whole dataset, because the first three column is categorical data onhot encoded.\n",
         "X_train[:, 3:] = sc.fit_transform(X_train[:, 3:])\n",
         "X_test[:, 3:] = sc.transform(X_test[:, 3:])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -507,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -553,7 +585,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.6"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
